--- a/index.html.html
+++ b/index.html.html
@@ -16,8 +16,7 @@
      <nav>
         <a href="#">home</a>
         <a href="#">noticia</a>
-        <a href="#">curiosidade</a>
-        <a href="#">Fale conosco</a>
+        <a href="#">Contanto</a>
      </nav>
      <main>
          <article>
